$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-19 (opened August 20, 2012)
 
	* density methods: all vegan functions that return simulated or
	permuted statistics have now density() methods that directly
	access the returned statistic. The functions can be used to plot
	the empirical distribution of the statistics with
	plot(density(<vegan-object>)). 

	The density methods were made available for adonis, anosim,
	mantel & partial.mantel, mrpp, permutest.cca and procrustes. The
	anova.cca function does not return permutated statistics.

	All density methods handle only one statistic. Function adonis()
	can return a matrix of permuted F-values for each term, and it
	gained a densityplot method (lattice package) that can handle all
	these simultaneously.
	
	Functions adipart, hiersimu and multipart were made
	oecosimu-compliant earlier and simultaneously they also gained the
	density and densityplot methods.

	* protest: do not return the observed statistic as one of the
	permuted values but separately.
	
Version 2.1-18 (closed August 20, 2012)

	* cIndexKM: internal function count() triggered a warning in R CMD
	check with R-devel because the funtion used .C() call to an
	unloaded packages "cclust". count() was never called in the
	current cIndexKM() and was removed together with the following
	currently unused functions: withinss(), varwithinss(),
	maxmindist(), vargss(). These deletions should have absolutely no
	visible effects.

	* envfit: the plot() method gained argument 'labels' to change the
	default labels. The default labels are displayed with the new
	labels() function.

	* vignettes: building vignettes failed in CRAN and R-Forge. These
	sites use TeXLive 2012 distribution which was not yet used by any
	vegan developer when vegan 2.0-4 was released. Ubuntu Linux still
	stocks TeXLive 2009, and new version is promised first for the
	12.10 release, and many other Linuxes are just as old. TeXLive